force-app/main/default/objects/Account/fields/crms14__Accounts_Next_Due_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_Next_Due_On__c</fullName>
    <inlineHelpText>The date that Accounts are next due, as provided by Companies House</inlineHelpText>
    <label>Accounts Next Due On</label>
    <type>Date</type>
</CustomField>