force-app/main/default/objects/Account/fields/crms14__Accounts_Next_Period_End_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__Accounts_Next_Period_End_On__c</fullName>
    <label>Accounts Next Period End On</label>
    <type>Date</type>
</CustomField>