force-app/main/default/objects/Account/fields/crms14__Cessation_Date__c.field-meta.xml
<CustomField>
    <fullName>crms14__Cessation_Date__c</fullName>
    <label>Cessation Date</label>
    <type>Date</type>
</CustomField>