force-app/main/default/objects/Account/fields/crms14__Company__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>crms14__Company__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>