force-app/main/default/objects/Account/fields/crms14__Company_Status__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company_Status__c</fullName>
    <inlineHelpText>Company Status as reported by Companies House</inlineHelpText>
    <label>Company Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>