force-app/main/default/objects/Account/fields/crms14__CS_Next_Due_On__c.field-meta.xml
<CustomField>
    <fullName>crms14__CS_Next_Due_On__c</fullName>
    <inlineHelpText>The date that the Confirmation Statement is next due, as provided by Companies House</inlineHelpText>
    <label>CS Next Due On</label>
    <type>Date</type>
</CustomField>