force-app/main/default/objects/Account/fields/crms14__Incorporation_Date__c.field-meta.xml
<CustomField>
    <fullName>crms14__Incorporation_Date__c</fullName>
    <description>The date this organisation was created.</description>
    <inlineHelpText>The date this organisation was created.</inlineHelpText>
    <label>Incorporation Date</label>
    <type>Date</type>
</CustomField>