force-app/main/default/objects/Account/fields/crms14__Last_Attempted__c.field-meta.xml
<CustomField>
    <fullName>crms14__Last_Attempted__c</fullName>
    <inlineHelpText>The most recent attempt to refresh this account.</inlineHelpText>
    <label>Last Refresh Attempted</label>
    <type>DateTime</type>
</CustomField>