force-app/main/default/objects/Account/fields/crms14__Parent_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__Parent_Company_Number__c</fullName>
    <label>Parent Company Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>