force-app/main/default/objects/Account/fields/crms14__reg_direct_Background_Sync__c.field-meta.xml
<CustomField>
    <fullName>crms14__reg_direct_Background_Sync__c</fullName>
    <label>Reg.Direct Background Sync</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>