force-app/main/default/objects/Account/fields/crms14__reg_direct_Sync_Now__c.field-meta.xml
<CustomField>
    <fullName>crms14__reg_direct_Sync_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reg.Direct Sync Now</label>
    <type>Checkbox</type>
</CustomField>