force-app/main/default/objects/Account/fields/crms14__Registered_Name__c.field-meta.xml
<CustomField>
    <fullName>crms14__Registered_Name__c</fullName>
    <inlineHelpText>The registered name of this organisation</inlineHelpText>
    <label>Registered Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>