force-app/main/default/objects/Account/fields/crms14__Registered_Office_In_Dispute__c.field-meta.xml
<CustomField>
    <fullName>crms14__Registered_Office_In_Dispute__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes whether the registered office is in dispute, as provided by Companies House</inlineHelpText>
    <label>Registered Office In Dispute</label>
    <type>Checkbox</type>
</CustomField>