force-app/main/default/objects/Account/fields/crms14__Registered_Office_Premises__c.field-meta.xml
<CustomField>
    <fullName>crms14__Registered_Office_Premises__c</fullName>
    <label>Registered Office Premises</label>
    <length>255</length>
    <type>Text</type>
</CustomField>