force-app/main/default/objects/Account/fields/crms14__Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__Registration_Number__c</fullName>
    <description>The registration number of the organisation</description>
    <inlineHelpText>The registration number of the organisation</inlineHelpText>
    <label>Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>