force-app/main/default/objects/Account/fields/crms14__SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>crms14__SIC_Code__c</fullName>
    <inlineHelpText>The SIC Code associated with this Company</inlineHelpText>
    <label>SIC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>